<resources>
    <string name="app_name">Quiz App</string>
    <string name="header_title">Barcelona Quiz App</string>
    <string name="question1">When was FC Barcelona founded?</string>
    <string name="question2">Many great players have played for FC Barcelona. Which of the following
    players formed part of the great "MSN" front three</string>
    <string name="_1899">1899</string>
    <string name="_1900">1900</string>
    <string name="_1901">1901</string>
    <string name="_1902">1902</string>
    <string name="quiz_1">Quiz 1</string>
    <string name="quiz_2">Quiz 2</string>
    <string name="lionel_messi">Lionel Messi</string>
    <string name="xavi_hernandez">Xavi Hernandez</string>
    <string name="neymar_jr">Neymar Jr</string>
    <string name="quiz_3">Quiz 3</string>
    <string name="question_3">FC Barcelona plays in one of the most prestigious and biggest stadiums in Europe. What is the name of this stadium?</string>
    <string name="question_4">FC Barcelona has had great coaches lead them in the past. Which of the below coaches have never managed FC Barcelona?</string>
    <string name="luis_arragones">Luis Arragones</string>
    <string name="pep_guardiola">Pep Guardiola</string>
    <string name="luiz_enrique">Luiz Enrique</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="quiz_4">Quiz 4</string>
    <string name="quiz_5">Quiz 5</string>
    <string name="question_5">Who is FC Barcelona\'s most successful manager?</string>
    <string name="johan_cruff">Johan Cruff</string>
    <string name="thomas_tuchel">Thomas Tuchel</string>
    <string name="tata_martino">Tata Martino</string>
    <string name="luiz_suarez">Luiz Suarez</string>
    <string name="name_of_stadium">Name of Stadium</string>
    <string name="submit">Submit</string>
</resources>